# 9-team-Devths-AI

./: .dockerignore  .env.example  .gitignore  .ruff.toml  API_SPEC.md  Dockerfile  README.md  appspec.yml  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements-serving.txt  requirements.txt  start_server.sh  test_calendar_parsing.py  test_text_extract.py  vllm_requirements.txt
.github/codeql/: codeql-config.yml
.github/codeql/extensions/: custom-sanitizers.yml
.github/template/: release-drafter.yml
.github/workflows/: ci-cd-nonprod.yml  ci-cd.yml  deploy-prod.yml  devths-pr.yml  devths.yml  drafter.yaml  issue-bug-notify.yml  release-automation.yaml
MarkDown/: Git_워크플로우_가이드.md
Prompt/: README.md
app/: __init__.py  main.py
app/api/routes/: ai.py  masking.py
app/api/routes/v1/: __init__.py  ai.py  masking.py
app/api/routes/v2/: __init__.py  _helpers.py  _sse_errors.py  calendar.py  chat.py  evaluation.py  masking.py  task.py  text_extract.py
app/config/: __init__.py  dependencies.py  settings.py
app/core/: task_storage.py
app/domain/chat/: __init__.py  chains.py
app/domain/evaluation/: __init__.py  analyzer.py  debate_graph.py  entities.py
app/domain/interview/: __init__.py  entities.py  graph.py
app/domain/masking/: __init__.py
app/domain/ocr/: __init__.py
app/eval/: run_evaluation.py
app/infrastructure/llm/: __init__.py  base.py  gemini.py  langchain_wrapper.py  openai_provider.py  vllm.py
app/infrastructure/ocr/: __init__.py  base.py
app/infrastructure/queue/: __init__.py  base.py  celery_queue.py  file_queue.py
app/infrastructure/session/: __init__.py  base.py  memory.py  redis.py
app/infrastructure/vectordb/: __init__.py  base.py  chroma.py
app/middlewares/: cloudwatch_middleware.py
app/parsers/: __init__.py  json_parser.py
app/prompts/: __init__.py  chat.py  evaluation.py  interview.py
app/prompts/templates/: security_rules.md
app/prompts/templates/chat/: extract_title.md  general_chat.md  opening.md  rag_context.md  system_general.md  system_rag.md
app/prompts/templates/evaluation/: analyze_interview.md  debate_rebuttal.md  gpt4o_analyze.md  synthesize_final.md
app/prompts/templates/interview/: analysis.md  followup.md  interview_question.md  interview_report.md  personality_questions.md  system_analysis.md  system_followup.md  system_general.md  system_interview.md  system_tech_interview.md  tech_followup.md  tech_interview_init.md  tech_next_question.md  technical_questions.md
app/schemas/: analyze.py  calendar.py  chat.py  common.py  embed.py  evaluation.py  frontend_direct.py  interview.py  masking.py  ocr.py  structured_output.py  text_extract.py
app/services/: calendar_parsing.py  chandra_masking.py  cloudwatch_service.py  gemini_masking.py  interview_dataset_service.py  interview_templates.py  llm_service.py  ocr_service.py  pii_masking.py  rag_service.py  vectordb_service.py  vllm_service.py
app/shared/: __init__.py
app/utils/: langfuse_client.py  log_sanitizer.py  prompt_guard.py  task_store.py
data/: README.md
deploy/: after_install.sh  before_install.sh  docker_deploy.sh  load_env_from_parameter_store.sh  rotate_logs.sh  start_server_deploy.sh  stop_server.sh  validate_service.sh
easyocr_server/: Dockerfile  main.py
scripts/: LANGFUSE_SETUP.md  README.md  docker-compose.yml  embed_interview_dataset.py  load_interview_dataset.py  start_vllm_gcp.sh  switch_model_gcp.sh  test_gcp_models.sh
terraform/: .gitignore  README.md
terraform/gcp-easyocr/: main.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/gcp-exaone8b/: main.tf  terraform.tfvars.example  variables.tf
