[tool.poetry]
name = "ai-server"
version = "1.0.0"
description = "FastAPI 기반 AI Server API"
authors = ["AI Server Support <ai-support@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10.19"

# ============================================
# Core Dependencies (서빙 전용 - 최소 필수)
# ============================================
# FastAPI and server
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

# Data validation
pydantic = {version = "^2.12.0", extras = ["email"]}

# File handling
python-multipart = "^0.0.6"

# HTTP client
httpx = "^0.26.0"

# Image processing
Pillow = "^10.2.0"

# PDF processing
pdf2image = "^1.17.0"
pdfplumber = "^0.11.0"

# Environment variables
python-dotenv = "^1.0.0"

# Numpy (lightweight, commonly needed)
numpy = ">=1.24.0,<2.0.0"

# Google Gemini API (서빙에 필수)
google-genai = "*"

# LLM Observability (서빙에 필수)
langfuse = "^3.12.0"
openai = "^2.15.0"

# RAG and VectorDB (서빙에 필수)
chromadb = "^0.4.24"

# CloudWatch Monitoring
boto3 = "^1.34.0"

# Pydantic Settings (설정 관리)
pydantic-settings = "^2.1.0"

# Redis (세션/태스크 저장소)
redis = "^5.0.0"

# ============================================
# LangChain & LangGraph (LLM 오케스트레이션)
# ============================================
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.0"
langchain-chroma = "^0.2.0"
langgraph = "^0.2.0"

# ============================================
# ML Dependencies (선택적 - 모델 추론/학습용)
# poetry install --with ml 로 설치
# ============================================
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# EasyOCR (v2: 별도 GPU 서버에서 구동, AI Endpoint에서는 불필요)
easyocr = "^1.7.0"

# OpenCV for face detection
opencv-python = "^4.8.0"

# Microsoft Presidio (PII detection)
presidio-analyzer = "*"
presidio-image-redactor = "*"
spacy = "^3.0.0"

# Chandra OCR model
transformers = "^4.30.0"
torch = "^2.0.0"
chandra-ocr = {git = "https://github.com/datalab-to/chandra.git"}

# Hugging Face datasets
datasets = "^2.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
